[UPD] make the playlist

--- a/index.html
+++ b/index.html
@@ -17,4 +17,54 @@
     <title>Spotify</title>
 </head>
 <body>
-    
+        <!-- ----CONTAINER ASIDE & CORPSE---- -->
+        <div class="wrapper-top">
+            <!-- ----ASIDE & SIDEBAR---- -->
+            <aside>
+                <div class="sidebar-top">
+                    <!-- ----LOGO---- -->
+                <div class="logo">
+                    <img class="mobile-hide" src="./img/logo.svg" alt="Logo Spotify">
+                    <img class="mobile-show" src="./img/logo-small.svg" alt="Logo Spotify">
+                </div>
+                <div class="navigation">
+                    <ul>
+                        <li><a class="icon home active" href=""><span class="mobile-hide">Home</span></a></li>
+                        <li><a class="icon search" href=""><span class="mobile-hide">Cerca</span></a></li>
+                        <li><a class="icon library" href=""><span class="mobile-hide">La tua Libreria</span></a></li>
+                    </ul>
+                </div>
+                <div class="play-title mobile-hide">
+                    <h4>Playlist</h4>
+                    <a href="">
+                        <div class="flex-row">
+                            <div class="add">+</div>
+                            <div class="add-text">Crea Playlist</div>
+                        </div>
+                    </a>
+                </div>
+                 <!-- ----PLAYLIST---- -->
+                 <div class="playlist mobile-hide">
+                    <ul>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                        <li><a href="">Nome Playlist</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="sidebar-user">
+                <a href=""><i class="far fa-arrow-alt-circle-down"></i><span class="mobile-hide">Installa App</span></a> 
+                <hr class="mobile-hide"/>
+                <div class="flex-row">
+                    <div class="user">    
+                        <img src="./img/profile.svg" alt="User's Photo">            
+                    </div>
+                    <div class="user-name mobile-hide">
+                        <h4>John Doe</h4>
+                    </div>
+                </div>
+            </div>
+        </aside>
