[UPD] create the header

--- a/index.html
+++ b/index.html
@@ -68,3 +68,11 @@
                 </div>
             </div>
         </aside>
+           <!-- ----CONTAINER MAIN---- -->
+           <div class="container-main">
+            <!-- ----HEADER---- -->
+            <header>
+                <div class="upgrade">
+                    Effettua l'Upgrade
+                </div>
+            </header>
