--- a/index.html
+++ b/index.html
@@ -76,3 +76,13 @@
                     Effettua l'Upgrade
                 </div>
             </header>
+            <!-- ----NAVBAR---- -->
+            <nav>
+                <a class="underline" href="">In Evidenza</a>
+                <a href="">Podcast</a>
+                <a href="">Classifiche</a>
+                <a href="">Generi e Mood</a>
+                <a href="">Nuove Uscite</a>
+                <a href="">Scopri</a>
+            </nav>
+            <main>
