[UPD] section part

--- a/index.html
+++ b/index.html
@@ -86,3 +86,57 @@
                 <a href="">Scopri</a>
             </nav>
             <main>
+                <!-- ----SECTION RECENTLY PLAYED---- -->
+                <section id="recent">
+                    <h2>Recently played</h2>
+                    <div class="flex-row">
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img class="click" src="./img/metal_lifting.jpg" alt="Heavy Metal Covers Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Heavy Metal</h3>
+                            <h6>Subtitle</h6>
+                        </div>
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/stranger.jpeg" alt="Stranger Things Vol.1">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Stranger Things Vol.1 (a Netflix Original Series Soundtrack)</h3>
+                            <h6>Kyle Dixon & Michael Stein</h6>
+                        </div>
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/aquietplace.jpeg" alt="A Quiet Place Soundtrack Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>A quiet Place</h3>
+                            <h6>Subtitle</h6>
+                        </div>
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/split.jpeg" alt="Split Soundtrack Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Split</h3>
+                            <h6>Subtitle</h6>
+                        </div>
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/cure.jpeg" alt="A cure for wellness Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>A cure for Wellness</h3>
+                            <h6>Subtitle</h6>
+                        </div>
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/sinister.jpeg" alt="Sinister Soundtrack Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Sinister</h3>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+                </section>
