[UPD] create section advice

--- a/index.html
+++ b/index.html
@@ -140,3 +140,24 @@
                         </div>
                     </div>
                 </section>
+                <!-- ----SECTION ADVICE---- -->
+                <section id="advice">
+                    <h2 class="pull">Creato per John Doe</h2>
+                    <h6 class="push">Più Ascolti, Più accurati saranno i suggerimenti.</h6>
+                    <div class="flex-row">
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/radar.jpeg" alt="Soundtrack Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Release radar</h3>
+                        </div>
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/mixdaily.jpeg" alt="Soundtrack Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Daily Mix 1</h3>
+                        </div>
+                    </div>
+                </section>
