[UPD] create section rank

--- a/index.html
+++ b/index.html
@@ -161,3 +161,30 @@
                         </div>
                     </div>
                 </section>
+                 <!-- ----SECTION RANK---- -->
+                 <section id="rank">
+                    <h2 class="pull">Artisti più popolari</h2>
+                    <h6 class="push">Più Ascolti, Più accurati saranno i suggerimenti.</h6>
+                    <div class="flex-row">
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/youg.jpeg" alt="Lana del Ray Album Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Young Beautiful</h3>
+                            <h6>Lana del Ray</h6>
+                        </div>
+                        <div class="box-song">
+                            <div class="box-img">
+                                <img src="./img/einaudi.jpeg" alt="Einaudi Image">
+                                <i class="far fa-play-circle play"></i>
+                            </div>
+                            <h3>Einaudi</h3>
+                            <h6>Subtitle</h6>
+                        </div>
+                    </div>
+                </section>
+            </main>
+
+        </div>
+    </div>
