[UPD] create left panel

--- a/index.html
+++ b/index.html
@@ -190,3 +190,21 @@
     </div>
      <!-- ----FOOTER PANEL CONTROL---- -->
      <footer>
+         <!-- ----LEFT PANEL---- -->
+         <div class="panel-lt">
+            <div class="cover">
+                <img src="./img/sinister.jpeg" alt="Song's Cover Image">
+                <div class="song-name">
+                    <h4>Sinister</h4>
+                    <a>Brano Nome</a> 
+                </div>
+                <div class="action-song">
+                    <div class="document">
+                        <a href=""><i class="far fa-folder"></i></a>
+                    </div>
+                    <div class="like">
+                        <a href=""><i class="far fa-heart"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
