[UPD] create central panel index

--- a/index.html
+++ b/index.html
@@ -208,3 +208,22 @@
                 </div>
             </div>
         </div>
+         <!-- ----CENTRAL PANEL---- -->
+         <div class="panel-ct">
+            <div class="song-cmd">
+                <i class="fas fa-random"></i>
+                <i class="fas fa-step-backward"></i>
+                <i class="far fa-play-circle"></i>
+                <i class="fas fa-step-forward"></i>
+                <i class="fas fa-redo-alt"></i>
+            </div>
+            <div class="song-bar">
+                <span>0:25</span>
+                <div class="range">
+                    <div class="range-value">
+                        <div class="range-cmd"></div>
+                    </div>
+                </div>
+                <span>4:35</span>
+            </div>
+        </div>
