[UPD] create right panel

--- a/index.html
+++ b/index.html
@@ -227,3 +227,20 @@
                 <span>4:35</span>
             </div>
         </div>
+         <!-- ----RIGHT PANEL---- -->
+         <div class="panel-rt">
+            <div class="app-cmd">
+                <i class="fas fa-list"></i>
+                <i class="fas fa-desktop"></i>
+                <i class="fas fa-volume-up"></i>
+                <div class="range">
+                        <div class="range-value">
+                            <div class="range-cmd"></div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
